fixed some contrast and accessibility errors

--- a/src/styles/aboutUs.scss
+++ b/src/styles/aboutUs.scss
@@ -105,17 +105,20 @@
 }
 
 .aboutUsSubtitle {
-  color: #006039 !important;
   font-size: 24px;
   line-height: 1.5;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+  margin-top: 16px;
+  border-bottom: 4px solid $green;
+  width: fit-content;
 }
 
 .aboutUsLinkSalesR {
   text-decoration: none;
-  color: #006039;
+  border-bottom: 2px solid $green;
   cursor: pointer;
   transition: 0.2s;
+  color: white;
 }
 
 .aboutUsLinkSalesR:hover {
