--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -97,6 +97,7 @@
   color: white;
   font-size: 0.9em;
   cursor: pointer;
+  font-weight: bold;
 }
 
 .headerWhite {
